Added text rendering and now we can see: - score - ammo (number of rockets) - spaceship fuel - base HP

--- a/Spacecraft.vcxproj.filters
+++ b/Spacecraft.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="src\Spaceship.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\TextGenerator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="headers\Camera.h">
@@ -117,6 +120,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="headers\Spaceship.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="headers\TextGenerator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
