--- a/Spacecraft.vcxproj.filters
+++ b/Spacecraft.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="src\TextGenerator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MySQL.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="headers\Camera.h">
@@ -123,6 +126,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="headers\TextGenerator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MySQL.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
