--- a/Spacecraft.vcxproj
+++ b/Spacecraft.vcxproj
@@ -130,13 +130,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="MySQL.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Cube.cpp" />
     <ClCompile Include="src\EBO.cpp" />
     <ClCompile Include="src\glad.c" />
     <ClCompile Include="src\Manager.cpp" />
     <ClCompile Include="src\meteor.cpp" />
+    <ClCompile Include="src\MySQL.cpp" />
     <ClCompile Include="src\Point.cpp" />
     <ClCompile Include="src\Rectangle.cpp" />
     <ClCompile Include="src\Rocket.cpp" />
@@ -156,6 +156,7 @@
     <ClInclude Include="headers\EBO.h" />
     <ClInclude Include="headers\Manager.h" />
     <ClInclude Include="headers\meteor.h" />
+    <ClInclude Include="headers\MySQL.h" />
     <ClInclude Include="headers\Point.h" />
     <ClInclude Include="headers\Rectangle.h" />
     <ClInclude Include="headers\Rocket.h" />
@@ -168,7 +169,6 @@
     <ClInclude Include="headers\Texture.h" />
     <ClInclude Include="headers\VAO.h" />
     <ClInclude Include="headers\VBO.h" />
-    <ClInclude Include="MySQL.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
