Changed: - class rectangle 	+ added Shader as member 	+ added function for drawing rectangle as lines (without fill) - class MySQL 	+ we can get Score and Name of top 10 scores from database Added: - class TextBox 	+ for drawing text inside a frame 	+ added shaders for TextBox - in class manager 	+ we can see top 10 scores (press key M) from database

--- a/Spacecraft.vcxproj
+++ b/Spacecraft.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="src\Spaceship.cpp" />
     <ClCompile Include="src\Sphere.cpp" />
     <ClCompile Include="src\stb_image.cpp" />
+    <ClCompile Include="src\TextBox.cpp" />
     <ClCompile Include="src\TextGenerator.cpp" />
     <ClCompile Include="src\Texture.cpp" />
     <ClCompile Include="src\VAO.cpp" />
@@ -165,6 +166,7 @@
     <ClInclude Include="headers\Spaceship.h" />
     <ClInclude Include="headers\Sphere.h" />
     <ClInclude Include="headers\stb_image.h" />
+    <ClInclude Include="headers\TextBox.h" />
     <ClInclude Include="headers\TextGenerator.h" />
     <ClInclude Include="headers\Texture.h" />
     <ClInclude Include="headers\VAO.h" />
